<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="app_name">Laskin</string>
    <string name="sposti">burnsfrancis@hotmail.com</string>
    <string name="nav_laskimet">Laskimet</string>
    <string name="nav_muuntaja">Yksikönmuuntaja</string>
    <string name="nav_asetukset">Asetukset</string>
    <string name="nav_laskin">Laskin</string>
    <string name="nav_flaskin">Funktiolaskin</string>
    <string name="nav_alue">Alue</string>
    <string name="nav_pituus">Pituus</string>
    <string name="nav_massa">Massa</string>
    <string name="nav_lampö">Lämpö</string>
    <string name="nav_historia">Historia</string>
    <string name="poistaHistoria">Tyhjennä</string>
    <string name="kieli">Kieli</string>
    <string name="teema">Teema</string>

    <string name="tyhjennä">C</string>
    <string name="askelpalautin">⌫</string>
    <string name="jakolasku">÷</string>
    <string name="neliöjuuri">√</string>
    <string name="kuutiojuuri">\u221B</string>
    <string name="potenssi">x²</string>
    <string name="cube">x\u00B3</string>
    <string name="tenpow">10\u207F</string>
    <string name="sininv">sin\u207B\u00B9</string>
    <string name="cosinv">cos\u207B\u00B9</string>
    <string name="taninv">tan\u207B\u00B9</string>
    <string name="posneg">±</string>
    <string name="arrow">↑</string>
    <string name="xpown">xⁿ</string>
    <string name="epown">eⁿ</string>
    <string name="pi">π</string>
    <string name="sulkuAuki">(</string>
    <string name="sulkuKiinni">)</string>
    <string name="kertolasku">x</string>
    <string name="on">=</string>
    <string name="miinus">-</string>
    <string name="piste">.</string>
    <string name="plussa">+</string>

    <string name="num0">0</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>


    <string-array name="alue">
        <item>Neliömetri</item>
        <item>Neliösenttimetri</item>
        <item>Neliömetri</item>
        <item>Metri</item>
        <item>Eekkeri</item>
        <item>Hehtaari</item>
    </string-array>

    <string-array name="pituus">
        <item>Nanometri</item>
        <item>Millimetri</item>
        <item>Senttimetri</item>
        <item>Metri</item>
        <item>Kilometri</item>
        <item>Tuuma</item>
        <item>Jalka</item>
        <item>Jaardi</item>
        <item>Maili</item>
    </string-array>

    <string-array name="lampö">
        <item>Celsius</item>
        <item>Fahrenheit</item>
        <item>Kelvin</item>
    </string-array>

    <string-array name="massa">
        <item>Milligramma</item>
        <item>Senttigramma</item>
        <item>Desigramma</item>
        <item>Gramma</item>
        <item>Kilogramma</item>
        <item>Tonni</item>
        <item>Pauna</item>
        <item>Unssi</item>
    </string-array>

    <string name="mode1">Aste</string>
    <string name="mode2">Radiaani</string>
    <string name="toggle">Vaihda</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="naturalLog">ln</string>
    <string name="hyperbolicSine">sinh</string>
    <string name="hyperbolicCosine">cosh</string>
    <string name="hyperbolicTan">tanh</string>
    <string name="log">log</string>
    <string name="Mod">%</string>
    <string name="inverse">1/x</string>
    <string name="factorial" >x!</string>

</resources>
