<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_laskin"
            android:title="@string/nav_laskin" />
        <item
            android:id="@+id/nav_flaskin"
            android:title="@string/nav_flaskin" />
        <item
            android:id="@+id/nav_alue"
            android:title="@string/nav_alue" />
        <item
            android:id="@+id/nav_pituus"
            android:title="@string/nav_pituus" />
        <item
            android:id="@+id/nav_massa"
            android:title="@string/nav_massa" />
        <item
            android:id="@+id/nav_lampo"
            android:title="@string/nav_lampo" />
    </group>

</menu>