<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".FragmentFunktio$FunktioLaskin"
    tools:showIn="@layout/fragment_flaskin">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:editable="false"
        android:textAlignment="textEnd"
        android:gravity="end"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:layout_below="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:editable="false"
        android:textAlignment="textEnd"
        android:gravity="end"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/potenssi"
        android:layout_below="@+id/editText2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/potenssi"
        android:onClick="onClick"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/xpowy"
        android:layout_alignBottom="@+id/potenssi"
        android:layout_toRightOf="@+id/potenssi"
        android:layout_toEndOf="@+id/potenssi"
        android:text="@string/xpown"
        android:onClick="onClick"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log"
        android:id="@+id/log"
        android:layout_alignBottom="@+id/xpowy"
        android:layout_toRightOf="@+id/xpowy"
        android:layout_toEndOf="@+id/xpowy"
        android:onClick="onClick"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sin"
        android:id="@+id/sin"
        android:layout_below="@+id/potenssi"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClick"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cos"
        android:id="@+id/cos"
        android:layout_alignBottom="@+id/sin"
        android:layout_alignLeft="@+id/xpowy"
        android:layout_alignStart="@+id/xpowy"
        android:onClick="onClick"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tan"
        android:id="@+id/tan"
        android:layout_alignBottom="@+id/cos"
        android:layout_toRightOf="@+id/cos"
        android:layout_toEndOf="@+id/cos"
        android:onClick="onClick"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vaihda"
        android:text="@string/toggle"
        android:layout_below="@+id/sin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:layout_toLeftOf="@+id/cos"
        android:layout_toStartOf="@+id/cos"
        android:onClick="onClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/factorial"
        android:id="@+id/factorial"
        android:layout_alignBottom="@+id/vaihda"
        android:layout_toRightOf="@+id/vaihda"
        android:layout_toEndOf="@+id/vaihda"
        android:onClick="onClick"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/neliöjuuri"
        android:layout_alignBottom="@+id/factorial"
        android:layout_toRightOf="@+id/factorial"
        android:layout_toEndOf="@+id/factorial"
        android:text="@string/neliöjuuri"
        android:onClick="onClick"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tyhjennä"
        android:id="@+id/tyjennä"
        android:layout_above="@+id/tan"
        android:layout_toRightOf="@+id/log"
        android:layout_toEndOf="@+id/log"
        android:onClick="onClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/askelpalautin"
        android:id="@+id/backSpace"
        android:layout_above="@+id/neliöjuuri"
        android:layout_toRightOf="@+id/tan"
        android:layout_toEndOf="@+id/tan"
        android:onClick="onClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pi"
        android:id="@+id/pi"
        android:layout_alignBottom="@+id/neliöjuuri"
        android:layout_alignLeft="@+id/backSpace"
        android:layout_alignStart="@+id/backSpace"
        android:onClick="onClick"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num7"
        android:id="@+id/num7"
        android:layout_below="@+id/vaihda"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num8"
        android:id="@+id/num8"
        android:layout_alignBottom="@+id/num7"
        android:layout_toRightOf="@+id/num7"
        android:layout_toEndOf="@+id/num7"
        android:onClick="onClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num9"
        android:id="@+id/num9"
        android:layout_alignBottom="@+id/num8"
        android:layout_toRightOf="@+id/num8"
        android:layout_toEndOf="@+id/num8"
        android:onClick="onClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num4"
        android:id="@+id/num4"
        android:layout_below="@+id/num7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num5"
        android:id="@+id/num5"
        android:layout_alignBottom="@+id/num4"
        android:layout_alignLeft="@+id/num8"
        android:layout_alignStart="@+id/num8"
        android:onClick="onClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num6"
        android:id="@+id/num6"
        android:layout_alignBottom="@+id/num5"
        android:layout_toRightOf="@+id/num5"
        android:layout_toEndOf="@+id/num5"
        android:onClick="onClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num1"
        android:id="@+id/num1"
        android:layout_below="@+id/num4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num2"
        android:id="@+id/num2"
        android:layout_alignBottom="@+id/num1"
        android:layout_alignLeft="@+id/num5"
        android:layout_alignStart="@+id/num5"
        android:onClick="onClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num3"
        android:id="@+id/num3"
        android:layout_alignBottom="@+id/num2"
        android:layout_toRightOf="@+id/num2"
        android:layout_toEndOf="@+id/num2"
        android:onClick="onClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/posneg"
        android:id="@+id/posneg"
        android:layout_below="@+id/num1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:onClick="onClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num0"
        android:id="@+id/num0"
        android:layout_alignBottom="@+id/posneg"
        android:layout_toRightOf="@+id/posneg"
        android:layout_toEndOf="@+id/posneg"
        android:onClick="onClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/piste"
        android:id="@+id/piste"
        android:layout_alignBottom="@+id/num0"
        android:layout_toRightOf="@+id/num0"
        android:layout_toEndOf="@+id/num0"
        android:textSize="20sp"
        android:nestedScrollingEnabled="false"
        android:onClick="onClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jakolasku"
        android:id="@+id/divide"
        android:layout_above="@+id/num6"
        android:layout_toRightOf="@+id/num9"
        android:layout_toEndOf="@+id/num9"
        android:onClick="onClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kertolasku"
        android:id="@+id/kertolasku"
        android:layout_above="@+id/num3"
        android:layout_alignLeft="@+id/jakolasku"
        android:layout_alignStart="@+id/jakolasku"
        android:onClick="onClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/miinus"
        android:id="@+id/miinus"
        android:layout_above="@+id/piste"
        android:layout_alignLeft="@+id/kertolasku"
        android:layout_alignStart="@+id/kertolasku"
        android:textSize="20sp"
        android:onClick="onClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plussa"
        android:id="@+id/plus"
        android:layout_alignBottom="@+id/piste"
        android:layout_alignLeft="@+id/miinus"
        android:layout_alignStart="@+id/miinus"
        android:onClick="onClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on"
        android:id="@+id/on"
        android:onClick="onClick"
        android:layout_below="@+id/num0"
        android:layout_toRightOf="@+id/num0"
        android:layout_toEndOf="@+id/num0" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sulkuAuki"
        android:id="@+id/sulkuAuki"
        android:layout_alignTop="@+id/on"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sulkuKiinni"
        android:id="@+id/sulkuKiinni"
        android:layout_alignBottom="@+id/on"
        android:layout_toRightOf="@+id/sulkuAuki"
        android:layout_toEndOf="@+id/sulkuAuki"
        android:onClick="onClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode1"
        android:id="@+id/mode"
        android:layout_alignBottom="@+id/on"
        android:layout_toRightOf="@+id/on"
        android:layout_toEndOf="@+id/on"
        android:onClick="onClick"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nav_historia"
        android:id="@+id/historia"
        android:layout_below="@+id/sulkuAuki"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClick"/>

</RelativeLayout>
